docs: change import category status code and request body
