# src/modules/cars/useCases/importCategory/ImportCategoryController.ts
@@ -11,7 +11,7 @@ class ImportCategoryController {
 
     await importCategoryUseCase.execute(file);
 
-    return response.status(203).send();
+    return response.status(201).send();
   }
 }
 
